Shifted the results panel 1px up and fixed the border-bottom

--- a/styles/omnibar.less
+++ b/styles/omnibar.less
@@ -174,13 +174,12 @@
     position: absolute;
     width: 100%;
     background: @omnibar-results-background;//@pane-background-color;
-    top: 58px;
-    // min-height: 100px;
+    top: 57px;
     max-height: 600px;
     overflow: auto;
     z-index: 13;
     box-shadow: 0 1px 15px rgba(0, 0, 0, 0.2);
-    border-bottom: @pane-border-width solid @pane-border-color;
+    border-bottom: 1px solid darken(@workspace-background-color, 15%);
     padding-bottom: 20px;
 
     ol
